Fix an assert when trying to activate an image snapshot

Node activation should happen via KisImageSignalRouter since it
pushes the signal into the same queue where node removel/addition
signals go (via KisSynchronizedConnection).

BUG:492114